--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -64,6 +64,7 @@ aliases:
   shell: app exec --interactive --reuse "bash"
   logs: app logs -f
   dbc: app exec --interactive --reuse "bin/rails dbconsole"
+  update_games: app exec "bin/rails dk_games:update"
 
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
