--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -14,6 +14,10 @@ development:
     class: UpdateDkGamesJob
     queue: default
     schedule: every 5 hours
+  place_liams_line:
+    class: PlaceLiamsLineJob
+    queue: default
+    schedule: at 7am on Sunday
 
 production:
   clear_solid_queue_finished_jobs:
@@ -23,3 +27,7 @@ production:
     class: UpdateDkGamesJob
     queue: default
     schedule: every 5 hours
+  place_liams_line:
+    class: PlaceLiamsLineJob
+    queue: default
+    schedule: at 7am on Sunday
