--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -10,16 +10,24 @@
 #     schedule: at 5am every day
 
 development:
-  update_dk_games:
+  update_dk_games_daily:
     class: UpdateDkGamesJob
     queue: default
-    schedule: every 5 hours
+    schedule: at 12:00 and 24:00 every day
+  update_dk_games_weekends:
+    class: UpdateDkGamesJob
+    queue: default
+    schedule: at 9:00 and 15:00 on saturday and sunday
 
 production:
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
-  update_dk_games:
+  update_dk_games_daily:
     class: UpdateDkGamesJob
     queue: default
-    schedule: every 5 hours
+    schedule: at 12:00 and 24:00 every day
+  update_dk_games_weekends:
+    class: UpdateDkGamesJob
+    queue: default
+    schedule: at 9:00 and 15:00 on saturday and sunday
